<resources>
    <string name="app_name">CadastroAlunos</string>
    <string name="ra">RA</string>
    <string name="nome">Nome</string>
    <string name="cpf">CPF</string>
    <string name="dtNasc">Dt. Nascimento</string>
    <string name="dtMatricula">Dt. Matricula</string>
    <string name="cursos">Cursos</string>
    <string name="periodo">Período</string>
    <string name="selecioneCurso">Selecione o Curso</string>
    <string name="selecionePeriodo">Selecione o Período</string>
    <string name="limpar">Limpar</string>
    <string name="salvar">Salvar</string>
    <string name="curso">Curso</string>
    <string name="addAluno">Adicionar Aluno</string>
    <string name="lancar_notas">Lançar Notas</string>
    <string name="lancar_frequencias">Lançar Frequencias</string>
    <string name="disciplina">Disciplina</string>
    <string name="selecioneDisciplina">Selecione a Disciplina</string>
    <string name="qtAlunos">Quantidade Alunos</string>
    <string name="turma">Turma</string>
    <string name="selecioneProfessor">Selecione o Professor</string>
    <string name="professor">Professor</string>
    <string name="dtContratacao">Dt. Contratacao</string>
    <string name="Aluno">Aluno</string>
    <string name="selecionealuno">Selecione o Aluno</string>
    <string name="nota">Nota</string>
    <string name="dtLancamento">Data Lancamento</string>
    <string name="title_activity_lista_turma">ListaTurmaActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="regime">Regime</string>
    <string name="selecioneRegime">Selecione o Regime</string>

    <!--Cabeçalhos-->
    <string name="cadastrar_disciplina">Cadastrar Disciplina</string>
    <string name="cadastrar_professor">Cadastrar Professor</string>
    <string name="cadastrar_turma">Cadastrar Turma</string>
    <string name="cadastrar_aluno">Cadastrar Aluno</string>

    <string name="listaTurma">Lista de Turmas</string>
    <string name="listaDisciplina">Lista de Disciplinas</string>
    <string name="listaProfessor">Lista de Professores</string>
    <string name="listaAluno">Lista de Alunos</string>
    <string name="selecioneTurma">Selecione a Turma</string>
    <string name="statusAprovacao">Status de Aprovação</string>
    <string name="cadastrar_frequencia">Lançar Frequência</string>
    <string name="cadastrar_nota">Lançar Nota</string>
    <string name="percentual_frequencia">Percentual de Frequência</string>
</resources>