<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical"
        android:padding="10dp"
        >
    <Button
            android:id="@+id/cadastroProfessor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@mipmap/ic_cadastro"
            android:text="@string/cadastrar_professor"
            android:backgroundTint="@color/cardview_shadow_end_color"
            android:textColor="@color/black"
            android:shadowRadius="@integer/material_motion_duration_medium_1"
    />

    <Button
            android:id="@+id/cadastroDisciplina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@mipmap/ic_cadastro"
            android:text="@string/cadastrar_disciplina"
            android:backgroundTint="@color/cardview_shadow_end_color"
            android:textColor="@color/black"
            android:shadowRadius="@integer/material_motion_duration_medium_1"
            android:onClick="cadastroDisciplina"
    />

    <Button
            android:id="@+id/cadastroTurma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@mipmap/ic_cadastro"
            android:text="@string/cadastrar_turma"
            android:backgroundTint="@color/cardview_shadow_end_color"
            android:textColor="@color/black"
            android:shadowRadius="@integer/material_motion_duration_medium_1"
    />

    <Button
            android:id="@+id/cadastroAluno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@mipmap/ic_cadastro"
            android:text="@string/cadastrar_aluno"
            android:backgroundTint="@color/cardview_shadow_end_color"
            android:textColor="@color/black"
            android:shadowRadius="@integer/material_motion_duration_medium_1"
    />

    <Button
            android:id="@+id/lancarNotas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@mipmap/ic_cadastro"
            android:text="@string/lancar_notas"
            android:backgroundTint="@color/cardview_shadow_end_color"
            android:textColor="@color/black"
            android:shadowRadius="@integer/material_motion_duration_medium_1"
    />

    <Button
            android:id="@+id/lancarFrequencias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@mipmap/ic_cadastro"
            android:text="@string/lancar_frequencias"
            android:backgroundTint="@color/cardview_shadow_end_color"
            android:textColor="@color/black"
            android:shadowRadius="@integer/material_motion_duration_medium_1"
    />







</LinearLayout>