<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/llCadProfessor"
        tools:context=".CadastroProfessorActivity">
    <!--
    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:id="@+id/tollBar"
                    android:background="?attr/colorPrimary">
            </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    -->
    <!--RA-->
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/ra">
        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edRaProfessor"
                android:inputType="number">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>
    <!--Nome-->
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/nome">
        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edNomeProfessor">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>
    <!--CPF-->
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/cpf">
        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edCPFProfessor"
                android:maxLength="14"
                android:inputType="number">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>
    <!--Datas-->
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <!--Data Nascimento-->
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/dtNasc">
            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edDtNascimentoProfessor"
                    android:onClick="selecionarData">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <!--Data Inscrição-->
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/dtMatricula">
            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edDtInscricaoProfessor"
                    android:onClick="selecionarData">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <!--Curso-->
    <fr.ganfra.materialspinner.MaterialSpinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:id="@+id/spCursos"
            app:ms_arrowColor="?attr/colorPrimary"
            app:ms_floatingLabelText="@string/cursos"
            app:ms_hint="@string/selecioneCurso"
            app:ms_multiline="false">

    </fr.ganfra.materialspinner.MaterialSpinner>
    <!--Periodo-->
    <fr.ganfra.materialspinner.MaterialSpinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:id="@+id/spPeriodosProfessor"
            app:ms_arrowColor="?attr/colorPrimary"
            app:ms_floatingLabelText="@string/periodo"
            app:ms_hint="@string/selecionePeriodo"
            app:ms_multiline="false">

    </fr.ganfra.materialspinner.MaterialSpinner>

</LinearLayout>