<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CadastroFrequenciaActivity"
        android:orientation="vertical">

    <!--Campo de Turma-->
    <fr.ganfra.materialspinner.MaterialSpinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/spTurma"
            app:ms_arrowColor="?attr/colorPrimary"
            app:ms_arrowSize="14dp"
            app:ms_floatingLabelText="@string/turma"
            app:ms_hint="@string/selecioneTurma"
            app:ms_multiline="false"/>

    <!--Campo de Aluno-->
    <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/Aluno"
            android:id="@+id/edNomeAluno"/>

    <!--Campo de Data Inscrição-->
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/percentual_frequencia"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edPcFrequencia"
                android:inputType="number"
                android:maxLength="3"/>
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>