<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CadastroAlunoActivity"
        android:orientation="vertical"
        android:id="@+id/lnPrincipal">

    <!--?attr/ pega propriedade do elemento Pai-->
    <!--
    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:id="@+id/tollBar"
                android:background="?attr/colorPrimary">
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    -->

    <!--Campo de RA-->
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ra"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edRaAluno"
                android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!--Campo de Nome-->
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edNomeAluno"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!--Campo de CPF-->
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cpf"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edCpfAluno"
                android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="10dp"
                  android:orientation="horizontal">

        <!--Campo de Data Nascimento-->
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/dtNasc"
                android:layout_marginLeft="10dp"
                app:startIconDrawable="@drawable/ic_calendar3">
            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edDtNasc"
                    android:onClick="selecionarData"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--Campo de Data Inscrição-->
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/dtMatricula"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:startIconDrawable="@drawable/ic_calendar3">
            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edDtMatricula"
                    android:onClick="selecionarData"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <!--Campo de Cursos-->
    <fr.ganfra.materialspinner.MaterialSpinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/spCursos"
            app:ms_arrowColor="?attr/colorPrimary"
            app:ms_arrowSize="14dp"
            app:ms_floatingLabelText="@string/cursos"
            app:ms_hint="@string/selecioneCurso"
            app:ms_multiline="false"/>


    <!--Campo de Cursos-->
    <fr.ganfra.materialspinner.MaterialSpinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/spPeriodo"
            app:ms_arrowColor="?attr/colorPrimary"
            app:ms_arrowSize="14dp"
            app:ms_floatingLabelText="@string/periodo"
            app:ms_hint="@string/selecionePeriodo"
            app:ms_multiline="false"/>

</LinearLayout>