<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroProfessorActivity"
    android:orientation="vertical">

  <!--Campo de RA-->
  <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/ra"
          android:layout_marginTop="10dp"
          android:layout_marginLeft="10dp"
          android:layout_marginRight="10dp">
    <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edRaProfessor"
            android:inputType="number"/>
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/nome"
          android:layout_marginTop="10dp"
          android:layout_marginLeft="10dp"
          android:layout_marginRight="10dp">
    <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edNomeProfessor"/>
  </com.google.android.material.textfield.TextInputLayout>

  <!--Campo de CPF-->
  <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/cpf"
          android:layout_marginTop="10dp"
          android:layout_marginLeft="10dp"
          android:layout_marginRight="10dp">
    <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edCpfProfessor"
            android:inputType="number"/>
  </com.google.android.material.textfield.TextInputLayout>

  <LinearLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

    <!--Campo de Data Nascimento-->
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/dtNasc"
            android:layout_marginLeft="10dp"
            app:startIconDrawable="@drawable/ic_calendar3">
      <com.google.android.material.textfield.TextInputEditText
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/edDtNasc"
              android:onClick="selecionarData"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!--Campo de Data Inscrição-->
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/dtContratacao"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:startIconDrawable="@drawable/ic_calendar3">
      <com.google.android.material.textfield.TextInputEditText
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/edDtContratacao"
              android:onClick="selecionarData"/>
    </com.google.android.material.textfield.TextInputLayout>





  </LinearLayout>