<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cvAluno"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:cardUseCompatPadding="true">
        <!--Linear de Fora-->
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
            <!--Campo de Nome-->
            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nome"
                    android:layout_margin="5dp">
                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/edNomeTurma"
                        android:focusable="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!--Linear de Turma e Disciplina-->
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">
                <!--Campo de Período-->
                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:hint="@string/periodo"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp">
                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/edPeriodoTurma"
                            android:focusable="false"/>
                </com.google.android.material.textfield.TextInputLayout>

                <!--Campo de Disciplina-->
                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:hint="@string/disciplina"
                        android:layout_marginRight="5dp">
                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/edDisciplinaTurma"
                            android:focusable="false"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <!--Campo de Quantidade-->
            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/qtAlunos">
                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/edQtAlunos"
                        android:focusable="false"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>